[package]
name = "rawr"
version = "0.2.0"
authors = ["Aurora0001 <aurora01@safe-mail.net>"]
license = "MIT"
documentation = "https://aurora0001.github.io/rawr/doc/rawr/index.html"
repository = "https://github.com/Aurora0001/rawr"
description = "Rust API Wrapper for Reddit"
build = "build.rs"
exclude = [
  "**/*.out",
  "**/*.lock",
  "**/*.yml",
  "**/*.sh"
]

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
hyper = "0.11.2"
serde = "1.0.11"
serde_json = "1.0.2"
